--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-extract-components",
+  "name": "styled-ve",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
